--- a/svc_kube_vision_opencv_nonfree/Dockerfile
+++ b/svc_kube_vision_opencv_nonfree/Dockerfile
@@ -18,6 +18,29 @@ RUN apt-get -y update
 RUN apt-get -y install supervisor  openssh-server  python-software-properties software-properties-common python-pip git nano curl tmux htop mc
 RUN apt-get install -y build-essential cmake libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev ocl-icd-opencl-dev libcanberra-gtk3-module cmake libqt4-dev
 RUN pip install matplotlib
+RUN apt-get install -y \
+    build-essential \
+    cmake \
+    curl \
+    gfortran \
+    git \
+    libatlas-dev \
+    libavcodec-dev \
+    libavformat-dev \
+    libboost-all-dev \
+    libgtk2.0-dev \
+    libjpeg-dev \
+    liblapack-dev \
+    libswscale-dev \
+    pkg-config \
+    python-dev \
+    python-pip \
+    wget \
+    zip \
+    vim \
+    apache2
+RUN pip2 install numpy scipy pandas
+RUN pip2 install scikit-learn scikit-image
 
 RUN mkdir /src
 WORKDIR /src
@@ -36,28 +59,31 @@ RUN cmake -D CMAKE_BUILD_TYPE=RELEASE \
 		  -D BUILD_NEW_PYTHON_SUPPORT=ON \
 		  -D WITH_V4L=ON \
 		  ..
-RUN make -j7
+RUN make -j8
 RUN make install
 
-#ssh configs
-RUN mkdir /root/.ssh
-RUN mkdir /var/run/sshd
-
-ADD sshkey.pub /root/.ssh/authorized_keys
-RUN chown root:root /root/.ssh/authorized_keys
-RUN sed -i "s/UsePrivilegeSeparation.*/UsePrivilegeSeparation no/g" /etc/ssh/sshd_config && sed -i "s/UsePAM.*/UsePAM no/g" /etc/ssh/sshd_config
+RUN mkdir -p /src/dlib && \
+    cd /src/dlib && \
+    mkdir -p src && \
+    cd src && \
+    curl -L \
+         https://github.com/davisking/dlib/releases/download/v18.16/dlib-18.16.tar.bz2 \
+         -o dlib.tar.bz2 && \
+    tar xf dlib.tar.bz2 && \
+    cd dlib-18.16/python_examples && \
+    mkdir build && \
+    cd build && \
+    cmake ../../tools/python && \
+    cmake --build . --config Release && \
+    cp dlib.so ..
 
 RUN cd /src/ && \
     git clone https://github.com/introlab/find-object.git && \
-    cd find_object/build && \
+    mkdir -p find-object/build && \
+    cd find-object/build && \
     cmake -DCMAKE_BUILD_TYPE=Release .. && \
     make -j8 && \
     cd ../bin && \
     ls -l
 
-RUN mkdir -p /var/log/supervisor
-ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-
-
-EXPOSE 22
-CMD env | grep _ >> /etc/environment && /usr/bin/supervisord
+CMD /bin/bash
