fix aida, theia dependencies

--- a/svc_kube_vision_semantic_theia/Dockerfile
+++ b/svc_kube_vision_semantic_theia/Dockerfile
@@ -1,5 +1,4 @@
-# Version 2.0.1
-FROM tleyden5iwx/caffe-gpu-master
+FROM tleyden5iwx/caffe-cpu-master
 MAINTAINER Michael Bartoli <michael.bartoli@pomona.edu>
 
 RUN apt-get update
@@ -16,8 +15,7 @@ RUN apt-get -y install \
 	libatlas-base-dev \
 	gcc \
 	gfortran \
-	g++i \
-	xorg 
+	g++
 RUN apt-get install -f
 RUN pip install numpy scipy
 
@@ -61,27 +59,25 @@ ENV PATH ${PATH}:${JAVA_HOME}/bin
 
 # PREVIOUS GENERATION BASED ON NEURALTALK
 # fetch neuraltalk repo
-#WORKDIR /home
-#RUN git clone https://github.com/karpathy/neuraltalk
-#WORKDIR /home/neuraltalk
+WORKDIR /home
+RUN git clone https://github.com/karpathy/neuraltalk
+WORKDIR /home/neuraltalk
 
 # fetch model checkpoint
-#WORKDIR /home/neuraltalk/cv
-#RUN wget http://cs.stanford.edu/people/karpathy/neuraltalk/coco_cnn_lstm_v2.zip
-#RUN unzip coco_cnn_lstm_v2.zip
+WORKDIR /home/neuraltalk/cv
+RUN wget http://cs.stanford.edu/people/karpathy/neuraltalk/coco_cnn_lstm_v2.zip
+RUN unzip coco_cnn_lstm_v2.zip
 
 # fetch coco data
-#WORKDIR /home/neuraltalk/data
-#RUN wget http://cs.stanford.edu/people/karpathy/deepimagesent/coco.zip
-#RUN unzip coco.zip
+WORKDIR /home/neuraltalk/data
+RUN wget http://cs.stanford.edu/people/karpathy/deepimagesent/coco.zip
+RUN unzip coco.zip
 
-#WORKDIR /home
-#RUN git clone https://github.com/mbartoli/theia
-#WORKDIR /home/neuraltalk/data
-#RUN wget http://shannon.cs.illinois.edu/DenotationGraph/data/flickr30k-images.tar
-#RUN wget http://shannon.cs.illinois.edu/DenotationGraph/data/flickr30k.tar.gz
-#RUN tar -xvf flickr30k-images.tar
-#RUN tar -xvf flickr30k.tar.gz
+WORKDIR /home
+WORKDIR /home/neuraltalk/data
+RUN wget http://shannon.cs.illinois.edu/DenotationGraph/data/flickr30k-images.tar
+RUN wget http://shannon.cs.illinois.edu/DenotationGraph/data/flickr30k.tar.gz
+RUN tar -xvf flickr30k-images.tar
+RUN tar -xvf flickr30k.tar.gz
 
-
-
+CMD /bin/bash
