--- a/svc_kube_vision_opencvplus/app/CMakeLists.txt
+++ b/svc_kube_vision_opencvplus/app/CMakeLists.txt
@@ -1,6 +1,7 @@
 ADD_DEFINITIONS(
     #-std=c++11 # Or -std=c++0x
     # Other flags
+    -stdlib=libstdc++
     -pthread 
     -fdiagnostics-color=auto 
     -fmax-errors=1 
