--- a/svc_kube_vision_jones/Dockerfile
+++ b/svc_kube_vision_jones/Dockerfile
@@ -13,6 +13,8 @@ RUN echo 'deb http://archive.ubuntu.com/ubuntu precise multiverse' >> /etc/apt/s
 RUN add-apt-repository -y ppa:ubuntu-toolchain-r/test \
 	&& add-apt-repository -y ppa:tuleu/precise-backports
 
+RUN apt-add-repository ppa:ubuntu-sdk-team/ppa && apt-get update
+
 RUN apt-get update && apt-get install -y \
 	openjdk-7-jdk \
 	sox \
@@ -74,7 +76,11 @@ RUN apt-get update && apt-get install -y \
 	texi2html \
 	yasm \
 	zlib1g-dev \
-        openssl
+        openssl \
+        qtdeclarative5-dev \        
+        qt5-default \
+        qttools5-dev-tools
+
 
 RUN curl -k -# -O https://protobuf.googlecode.com/files/protobuf-2.5.0.tar.gz \
     && tar -xzvf protobuf-2.5.0.tar.gz \
@@ -93,6 +99,22 @@ RUN pip install pickledb
 
 #Download sirius source
 RUN git clone --progress --verbose https://github.com/jhauswald/sirius.git --branch master $SIRIUS_HOME
+
+WORKDIR /tmp
+RUN git clone https://github.com/Itseez/opencv.git
+RUN git clone https://github.com/Itseez/opencv_contrib.git
+
+RUN mkdir /tmp/opencv/build
+WORKDIR /tmp/opencv/build
+RUN cmake -DBUILD_TIFF=ON -DBUILD_opencv_java=OFF -DWITH_CUDA=OFF -DENABLE_AVX=ON -DWITH_OPENGL=ON -DWITH_OPENCL=ON -DWITH_IPP=OFF -DWITH_TBB=ON -DWITH_EIGEN=ON -DWITH_V4L=ON \
+          -DWITH_QT=5 -DBUILD_TESTS=OFF -DBUILD_PERF_TESTS=OFF -DCMAKE_BUILD_TYPE=RELEASE -DCMAKE_INSTALL_PREFIX=$(python3 -c "import sys; print(sys.prefix)") \
+          -DOPENCV_EXTRA_MODULES_PATH=/src/opencv_contrib/modules \
+          -DPYTHON_EXECUTABLE=$(which python3) \
+          -DPYTHON_INCLUDE_DIR=$(python3 -c "from distutils.sysconfig import get_python_inc; print(get_python_inc())") -DPYTHON_PACKAGES_PATH=$(python3 -c "from distutils.sysconfig import \
+          get_python_lib; print(get_python_lib())") ..
+
+RUN make -j8
+RUN make install
 
 #Setting up sirius
 WORKDIR $SIRIUS_HOME/sirius-application
